--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,3 +45,8 @@
 .e-input-group:not(.e-float-icon-left), .e-input-group.e-success:not(.e-float-icon-left), .e-input-group.e-warning:not(.e-float-icon-left), .e-input-group.e-error:not(.e-float-icon-left), .e-input-group.e-control-wrapper:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-success:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-warning:not(.e-float-icon-left), .e-input-group.e-control-wrapper.e-error:not(.e-float-icon-left){
   border: none;
 }
+
+table td {
+  font-family: inherit; /* Use the parent font-family (Tailwind styles) */
+  font-weight: normal;  /* Set the font weight as needed */
+}
